Various cosmetic updates (#167)